--- a/CNN_Times_series/tf.keras.ipynb
+++ b/CNN_Times_series/tf.keras.ipynb
@@ -5,7 +5,21 @@
    "execution_count": 1,
    "id": "bd2ef928",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'NaT' from 'pandas._libs' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m\n",
+      "File \u001b[1;32md:\\ML_DE\\Deep_Learning\\.venv\\lib\\site-packages\\pandas\\__init__.py:61\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# let init-time option registration happen\u001b[39;00m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig_init\u001b[39;00m  \u001b[38;5;66;03m# pyright: ignore[reportUnusedImport] # noqa: F401\u001b[39;00m\n\u001b[1;32m---> 61\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     62\u001b[0m     \u001b[38;5;66;03m# dtype\u001b[39;00m\n\u001b[0;32m     63\u001b[0m     ArrowDtype,\n\u001b[0;32m     64\u001b[0m     Int8Dtype,\n\u001b[0;32m     65\u001b[0m     Int16Dtype,\n\u001b[0;32m     66\u001b[0m     Int32Dtype,\n\u001b[0;32m     67\u001b[0m     Int64Dtype,\n\u001b[0;32m     68\u001b[0m     UInt8Dtype,\n\u001b[0;32m     69\u001b[0m     UInt16Dtype,\n\u001b[0;32m     70\u001b[0m     UInt32Dtype,\n\u001b[0;32m     71\u001b[0m     UInt64Dtype,\n\u001b[0;32m     72\u001b[0m     Float32Dtype,\n\u001b[0;32m     73\u001b[0m     Float64Dtype,\n\u001b[0;32m     74\u001b[0m     CategoricalDtype,\n\u001b[0;32m     75\u001b[0m     PeriodDtype,\n\u001b[0;32m     76\u001b[0m     IntervalDtype,\n\u001b[0;32m     77\u001b[0m     DatetimeTZDtype,\n\u001b[0;32m     78\u001b[0m     StringDtype,\n\u001b[0;32m     79\u001b[0m     BooleanDtype,\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;66;03m# missing\u001b[39;00m\n\u001b[0;32m     81\u001b[0m     NA,\n\u001b[0;32m     82\u001b[0m     isna,\n\u001b[0;32m     83\u001b[0m     isnull,\n\u001b[0;32m     84\u001b[0m     notna,\n\u001b[0;32m     85\u001b[0m     notnull,\n\u001b[0;32m     86\u001b[0m     \u001b[38;5;66;03m# indexes\u001b[39;00m\n\u001b[0;32m     87\u001b[0m     Index,\n\u001b[0;32m     88\u001b[0m     CategoricalIndex,\n\u001b[0;32m     89\u001b[0m     RangeIndex,\n\u001b[0;32m     90\u001b[0m     MultiIndex,\n\u001b[0;32m     91\u001b[0m     IntervalIndex,\n\u001b[0;32m     92\u001b[0m     TimedeltaIndex,\n\u001b[0;32m     93\u001b[0m     DatetimeIndex,\n\u001b[0;32m     94\u001b[0m     PeriodIndex,\n\u001b[0;32m     95\u001b[0m     IndexSlice,\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;66;03m# tseries\u001b[39;00m\n\u001b[0;32m     97\u001b[0m     NaT,\n\u001b[0;32m     98\u001b[0m     Period,\n\u001b[0;32m     99\u001b[0m     period_range,\n\u001b[0;32m    100\u001b[0m     Timedelta,\n\u001b[0;32m    101\u001b[0m     timedelta_range,\n\u001b[0;32m    102\u001b[0m     Timestamp,\n\u001b[0;32m    103\u001b[0m     date_range,\n\u001b[0;32m    104\u001b[0m     bdate_range,\n\u001b[0;32m    105\u001b[0m     Interval,\n\u001b[0;32m    106\u001b[0m     interval_range,\n\u001b[0;32m    107\u001b[0m     DateOffset,\n\u001b[0;32m    108\u001b[0m     \u001b[38;5;66;03m# conversion\u001b[39;00m\n\u001b[0;32m    109\u001b[0m     to_numeric,\n\u001b[0;32m    110\u001b[0m     to_datetime,\n\u001b[0;32m    111\u001b[0m     to_timedelta,\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;66;03m# misc\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     Flags,\n\u001b[0;32m    114\u001b[0m     Grouper,\n\u001b[0;32m    115\u001b[0m     factorize,\n\u001b[0;32m    116\u001b[0m     unique,\n\u001b[0;32m    117\u001b[0m     value_counts,\n\u001b[0;32m    118\u001b[0m     NamedAgg,\n\u001b[0;32m    119\u001b[0m     array,\n\u001b[0;32m    120\u001b[0m     Categorical,\n\u001b[0;32m    121\u001b[0m     set_eng_float_format,\n\u001b[0;32m    122\u001b[0m     Series,\n\u001b[0;32m    123\u001b[0m     DataFrame,\n\u001b[0;32m    124\u001b[0m )\n\u001b[0;32m    126\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdtypes\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdtypes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SparseDtype\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtseries\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m infer_freq\n",
+      "File \u001b[1;32md:\\ML_DE\\Deep_Learning\\.venv\\lib\\site-packages\\pandas\\core\\api.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      2\u001b[0m     NaT,\n\u001b[0;32m      3\u001b[0m     Period,\n\u001b[0;32m      4\u001b[0m     Timedelta,\n\u001b[0;32m      5\u001b[0m     Timestamp,\n\u001b[0;32m      6\u001b[0m )\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmissing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m NA\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdtypes\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdtypes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     10\u001b[0m     ArrowDtype,\n\u001b[0;32m     11\u001b[0m     CategoricalDtype,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     14\u001b[0m     PeriodDtype,\n\u001b[0;32m     15\u001b[0m )\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'NaT' from 'pandas._libs' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -30,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b50bbfb6",
    "metadata": {},
    "outputs": [
@@ -54,66 +68,106 @@
          "type": "float"
         },
         {
+         "name": "CO2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
          "name": "Occupancy",
          "rawType": "int64",
          "type": "integer"
         },
         {
-         "name": "Hour",
+         "name": "weekend",
          "rawType": "int64",
          "type": "integer"
         },
         {
-         "name": "Minute",
-         "rawType": "int64",
-         "type": "integer"
+         "name": "hour_sin",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "hour_cos",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "minute_sin",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "minute_cos",
+         "rawType": "float64",
+         "type": "float"
         }
        ],
-       "ref": "50e13d49-8fbc-49ef-897d-2cda4bd28ed7",
+       "ref": "6ea18321-8189-4150-8aa3-73dd25a7cfb1",
        "rows": [
         [
          "0",
-         "21.76",
-         "31.13333",
+         "23.18",
+         "27.272",
+         "721.25",
          "1",
-         "14",
-         "48"
+         "0",
+         "-0.9659258262890684",
+         "-0.2588190451025206",
+         "-0.8090169943749476",
+         "0.5877852522924729"
         ],
         [
          "1",
-         "21.79",
-         "31.0",
+         "23.15",
+         "27.2675",
+         "714.0",
          "1",
-         "14",
-         "49"
+         "0",
+         "-0.9659258262890684",
+         "-0.2588190451025206",
+         "-0.8090169943749476",
+         "0.5877852522924729"
         ],
         [
          "2",
-         "21.77",
-         "31.1225",
+         "23.15",
+         "27.245",
+         "713.5",
          "1",
-         "14",
-         "50"
+         "0",
+         "-0.9659258262890684",
+         "-0.2588190451025206",
+         "-0.6691306063588581",
+         "0.7431448254773942"
         ],
         [
          "3",
-         "21.77",
-         "31.1225",
+         "23.15",
+         "27.2",
+         "708.25",
          "1",
-         "14",
-         "51"
+         "0",
+         "-0.9659258262890684",
+         "-0.2588190451025206",
+         "-0.5877852522924734",
+         "0.8090169943749473"
         ],
         [
          "4",
-         "21.79",
-         "31.13333",
+         "23.1",
+         "27.2",
+         "704.5",
          "1",
-         "14",
-         "51"
+         "0",
+         "-0.9659258262890684",
+         "-0.2588190451025206",
+         "-0.4999999999999996",
+         "0.8660254037844388"
         ]
        ],
        "shape": {
-        "columns": 5,
+        "columns": 9,
         "rows": 5
        }
       },
@@ -138,66 +192,97 @@
        "      <th></th>\n",
        "      <th>Temperature</th>\n",
        "      <th>Humidity</th>\n",
+       "      <th>CO2</th>\n",
        "      <th>Occupancy</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>Minute</th>\n",
+       "      <th>weekend</th>\n",
+       "      <th>hour_sin</th>\n",
+       "      <th>hour_cos</th>\n",
+       "      <th>minute_sin</th>\n",
+       "      <th>minute_cos</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>21.76</td>\n",
-       "      <td>31.13333</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>27.2720</td>\n",
+       "      <td>721.25</td>\n",
        "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.965926</td>\n",
+       "      <td>-0.258819</td>\n",
+       "      <td>-0.809017</td>\n",
+       "      <td>0.587785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>21.79</td>\n",
-       "      <td>31.00000</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2675</td>\n",
+       "      <td>714.00</td>\n",
        "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.965926</td>\n",
+       "      <td>-0.258819</td>\n",
+       "      <td>-0.809017</td>\n",
+       "      <td>0.587785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21.77</td>\n",
-       "      <td>31.12250</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2450</td>\n",
+       "      <td>713.50</td>\n",
        "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.965926</td>\n",
+       "      <td>-0.258819</td>\n",
+       "      <td>-0.669131</td>\n",
+       "      <td>0.743145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>21.77</td>\n",
-       "      <td>31.12250</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2000</td>\n",
+       "      <td>708.25</td>\n",
        "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.965926</td>\n",
+       "      <td>-0.258819</td>\n",
+       "      <td>-0.587785</td>\n",
+       "      <td>0.809017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>21.79</td>\n",
-       "      <td>31.13333</td>\n",
+       "      <td>23.10</td>\n",
+       "      <td>27.2000</td>\n",
+       "      <td>704.50</td>\n",
        "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.965926</td>\n",
+       "      <td>-0.258819</td>\n",
+       "      <td>-0.500000</td>\n",
+       "      <td>0.866025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Temperature  Humidity  Occupancy  Hour  Minute\n",
-       "0        21.76  31.13333          1    14      48\n",
-       "1        21.79  31.00000          1    14      49\n",
-       "2        21.77  31.12250          1    14      50\n",
-       "3        21.77  31.12250          1    14      51\n",
-       "4        21.79  31.13333          1    14      51"
+       "   Temperature  Humidity     CO2  Occupancy  weekend  hour_sin  hour_cos  \\\n",
+       "0        23.18   27.2720  721.25          1        0 -0.965926 -0.258819   \n",
+       "1        23.15   27.2675  714.00          1        0 -0.965926 -0.258819   \n",
+       "2        23.15   27.2450  713.50          1        0 -0.965926 -0.258819   \n",
+       "3        23.15   27.2000  708.25          1        0 -0.965926 -0.258819   \n",
+       "4        23.10   27.2000  704.50          1        0 -0.965926 -0.258819   \n",
+       "\n",
+       "   minute_sin  minute_cos  \n",
+       "0   -0.809017    0.587785  \n",
+       "1   -0.809017    0.587785  \n",
+       "2   -0.669131    0.743145  \n",
+       "3   -0.587785    0.809017  \n",
+       "4   -0.500000    0.866025  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,137 +297,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "0c85aab3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "503"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "2\n",
+      "32\n"
+     ]
     }
    ],
    "source": [
-    "df_train.duplicated().sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "991ee7fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train = df_train.drop_duplicates(ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "30debb1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9249, 5)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "407ba437",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "139"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_val.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "96350ce3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_val = df_val.drop_duplicates(ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "bb062e72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2526, 5)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_val.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7f6d112e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "518"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "6394ecf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_test = df_test.drop_duplicates(ignore_index=True)"
+    "print(df_train.duplicated().sum())\n",
+    "print(df_val.duplicated().sum())\n",
+    "print(df_test.duplicated().sum())"
    ]
   },
   {
