--- a/CNN_Times_series/Prepro.ipynb
+++ b/CNN_Times_series/Prepro.ipynb
@@ -1940,7 +1940,7 @@
    "outputs": [],
    "source": [
     "# sin and cos are in [-1, 1] range \n",
-    "# 6:00 is 1 and 18:00 is -1  \n"
+    "# 6:00 is 1 and 18:00 is -1  "
    ]
   },
   {
